objects/copado__Promotion__c.object
<CustomObject>
    <description>This object tracks the changes that are promoted to the next Salesforce instance.</description>
    <fields>
        <fullName>copado__Back_Promotion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the promotion is from a higher environment to a lower environment in the deployment flow.</description>
        <inlineHelpText>Select this checkbox if you are promoting from a higher to a lower environment in the pipeline.</inlineHelpText>
        <label>Is Back-Promotion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field is checked by Copado once the promotion is merged and deployed successfully for multi-cloud platform.</inlineHelpText>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Connection_Behavior__c</fullName>
        <label>Connection Behavior</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Create_Full_Permission_Sets_Step__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this checkbox if you wish to move added profiles to a Full Profiles step. Doing this will remove the profiles from the Metadata step.</inlineHelpText>
        <label>Create Full Permission Sets Step</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Create_Full_Profiles_Step__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this checkbox if you wish to move added permission sets to a Full Permission Sets step. Doing this will remove the permission sets from the Metadata step.</inlineHelpText>
        <label>Create Full Profiles Step</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Destination_Environment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Environment</label>
        <referenceTo>copado__Environment__c</referenceTo>
        <relationshipLabel>Promotions (Destination Environment)</relationshipLabel>
        <relationshipName>Promotions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Destination_Org_Credential__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The destination credential that will be used when creating the deployment. This credential is auto-populated based on the pipeline linked to the project.</inlineHelpText>
        <label>Destination Credential</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>copado__Org__c.copado__Environment__c</field>
                <operation>equals</operation>
                <valueField>$Source.copado__Destination_Environment__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>copado__Org__c</referenceTo>
        <relationshipLabel>Promotions (Destination Credential)</relationshipLabel>
        <relationshipName>Promotions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Exclude_From_Auto_Resolve__c</fullName>
        <description>Conflicts found in the selected metadata types are not auto-resolved by Copado when merging feature branches into the promotion branch. The conflicts can be manually resolved using Copado.</description>
        <inlineHelpText>Select the metadata types that you want to manually resolve when a conflict occurs while merging the feature branch into the promotion branch.This field only affects metadata format pipelines and not source format pipelines.</inlineHelpText>
        <label>Exclude From Auto Resolve</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>copado__Auto_Resolve_Exceptions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Is_Rolled_Back__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Rolled Back?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Last_Deployment_Execution_Id__c</fullName>
        <label>Last Deployment Execution Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Last_Promotion_Execution_Id__c</fullName>
        <label>Last Promotion Execution Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Merge_Conflict__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates that this promotion includes a manual conflict resolution.</inlineHelpText>
        <label>Merge Conflict</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Order_by__c</fullName>
        <inlineHelpText>Populate this field if you want to set an ascending or descending merge order for the selected user stories in a deployment. For example, status__c asc</inlineHelpText>
        <label>Order User Stories by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Override_Destination_Changes__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When enabled, files from the source environment will be deployed directly, overriding any work in progress in the destination environment. When disabled, Copado will check for work in progress and prompt for conflict resolution if changes are detected.</inlineHelpText>
        <label>Override Destination Changes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Pipeline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Use this field only in Source Format Pipelines to enable advanced user story grouping:

- To group user stories from different projects within the same release: Select a Release (with no associated Project) and Pipeline

- To group user stories from any project and release: Select only Pipeline.

Leave this field empty for standard promotions using Project and/or Release fields.</inlineHelpText>
        <label>Pipeline</label>
        <referenceTo>copado__Deployment_Flow__c</referenceTo>
        <relationshipLabel>Promotions</relationshipLabel>
        <relationshipName>Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Platform__c</fullName>
        <formula>IF(NOT(ISBLANK( copado__Pipeline__c )),
    TEXT(copado__Pipeline__r.copado__Platform__c),
    IF(NOT(ISBLANK( copado__Project__c )),  
        TEXT(copado__Project__r.copado__Deployment_Flow__r.copado__Platform__c),
        IF(NOT(ISBLANK( copado__Release__c )),  
            TEXT(copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Platform__c), 
            &apos;Salesforce&apos;
        )
    )
)</formula>
        <inlineHelpText>This field auto-populates and displays the pipeline platform.</inlineHelpText>
        <label>Platform</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select a project linked to an active pipeline.</inlineHelpText>
        <label>Project</label>
        <referenceTo>copado__Project__c</referenceTo>
        <relationshipLabel>Promotions</relationshipLabel>
        <relationshipName>Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Promotion_Method__c</fullName>
        <inlineHelpText>Select how to synchronize changes with the environments: Environment Sync copies files directly from the source environment&apos;s branch, reducing conflict resolution overhead; Classic Promotion uses individual feature branches to promote changes, requiring sequential merge and conflict resolution for each branch.</inlineHelpText>
        <label>Promotion Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Environment Sync</fullName>
                </value>
                <value>
                    <fullName>Classic Promotion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will provide the ability to deploy User Stories within a Release.</description>
        <label>Release</label>
        <referenceTo>copado__Release__c</referenceTo>
        <relationshipLabel>Promotions</relationshipLabel>
        <relationshipName>Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Send_Deployment_Complete_email__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this checkbox if you want the promotion owner to receive an email notification when the promotion is complete.</inlineHelpText>
        <label>Notify When Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Source_Environment__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Source Environment</label>
        <referenceTo>copado__Environment__c</referenceTo>
        <relationshipLabel>Promotions</relationshipLabel>
        <relationshipName>Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Source_Org_Credential__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The source credential that will be used when creating the deployment. This credential is auto-populated based on the pipeline linked to the project.</inlineHelpText>
        <label>Source Credential</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>copado__Org__c.copado__Environment__c</field>
                <operation>equals</operation>
                <valueField>$Source.copado__Source_Environment__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>copado__Org__c</referenceTo>
        <relationshipLabel>Promotions (Source Credential)</relationshipLabel>
        <relationshipName>Promotions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Completed with errors</fullName>
                </value>
                <value>
                    <fullName>Validated</fullName>
                </value>
                <value>
                    <fullName>Validation failed</fullName>
                </value>
                <value>
                    <fullName>Merge Conflict</fullName>
                </value>
                <value>
                    <fullName>Conflicts Resolved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__View_in_Git__c</fullName>
        <description>Link to the User Story promotion branch in Git. The link is generated based on the Base Branch URL of the Git Repository record.</description>
        <formula>HYPERLINK(IF(AND(NOT(ISNULL(copado__Pipeline__r.copado__Git_Repository__r.copado__Branch_Base_URL__c)),copado__Pipeline__r.copado__Git_Repository__r.copado__Branch_Base_URL__c != &apos;&apos;),IF(AND(NOT(ISPICKVAL(copado__Pipeline__r.copado__Git_Repository__r.copado__Git_Provider__c, &apos;&apos;)),NOT(ISPICKVAL(copado__Pipeline__r.copado__Git_Repository__r.copado__Git_Provider__c, &apos;Others&apos;))),copado__Pipeline__r.copado__Git_Repository__r.copado__Branch_Base_URL__c + &apos;promotion/&apos; + Name,IF(CONTAINS(copado__Pipeline__r.copado__Git_Repository__r.copado__Branch_Base_URL__c, &apos;[BRANCH_NAME]&apos;),SUBSTITUTE(copado__Pipeline__r.copado__Git_Repository__r.copado__Branch_Base_URL__c,&apos;[BRANCH_NAME]&apos;,&apos;promotion/&apos; + Name),copado__Pipeline__r.copado__Git_Repository__r.copado__Branch_Base_URL__c + &apos;promotion/&apos; + Name)),IF(AND(NOT(ISNULL(copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c)),copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c != &apos;&apos;),IF(AND(NOT(ISPICKVAL(copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Git_Provider__c, &apos;&apos;)),NOT(ISPICKVAL(copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Git_Provider__c, &apos;Others&apos;))),copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c + &apos;promotion/&apos; + Name,IF(CONTAINS(copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c, &apos;[BRANCH_NAME]&apos;),SUBSTITUTE(copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c,&apos;[BRANCH_NAME]&apos;,&apos;promotion/&apos; + Name),copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c + &apos;promotion/&apos; + Name)),IF(AND(NOT(ISNULL(copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c)),copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c != &apos;&apos;),IF(AND(NOT(ISPICKVAL(copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Git_Provider__c, &apos;&apos;)),NOT(ISPICKVAL(copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Git_Provider__c, &apos;Others&apos;))),copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c + &apos;promotion/&apos; + Name,IF(CONTAINS(copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c, &apos;[BRANCH_NAME]&apos;),SUBSTITUTE(copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c,&apos;[BRANCH_NAME]&apos;,&apos;promotion/&apos; + Name),copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c + &apos;promotion/&apos; + Name)),&apos;&apos;))),&apos;promotion/&apos; + Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Link to the User Story promotion branch in Git. The link is generated based on the Base Branch URL of the Git Repository record.</inlineHelpText>
        <label>View in Git</label>
        <type>Text</type>
    </fields>
    <label>Promotion</label>
    <listViews>
        <fullName>copado__All</fullName>
        <columns>NAME</columns>
        <columns>copado__Destination_Environment__c</columns>
        <columns>copado__Project__c</columns>
        <columns>copado__Release__c</columns>
        <columns>copado__Source_Environment__c</columns>
        <columns>copado__Back_Promotion__c</columns>
        <columns>copado__Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>P{00000}</displayFormat>
        <label>Promotion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>copado__Scratch_Orgs_Disabled_for_Back_Promoting</fullName>
        <active>true</active>
        <errorConditionFormula>AND(copado__Back_Promotion__c == true,ISPICKVAL(copado__Destination_Org_Credential__r.copado__Org_Type__c,&apos;Scratch Org&apos;))</errorConditionFormula>
        <errorMessage>Back Promotions to Scratch Orgs are not allowed</errorMessage>
    </validationRules>
</CustomObject>